--- a/login.html
+++ b/login.html
@@ -1,68 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
-    <link rel="stylesheet" href="assets/css/Floating-Button.css">
-    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-    <link rel="stylesheet" href="assets/css/Header-Blue.css">
-    <link rel="stylesheet" href="assets/css/Map-Clean.css">
-    <link rel="stylesheet" href="assets/css/Social-Icons.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-
-<body>
-    <header class="header-blue">
-        <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
-            <div class="container-fluid">
-                <div class="col-2"><img class="logo" src="assets/img/Capture.png" width="80%"></div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <form class="d-flex me-auto navbar-form" target="_self">
-                        <div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"></label></div>
-                    </form>
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="catalog.html">Shop</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="testimonial.html">Testimonial</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="cart.html">Cart</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="login.html">Login</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="container"><a href="#" class="float">
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Untitled</title><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;display=swap"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"><link rel="stylesheet" href="/assets/css/styles.min.css?h=4851444a1375b3ac20739422ad845bd8"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css"></head><body><!-- Start: Header Blue --><header class="header-blue"><nav class="navbar navbar-dark navbar-expand-md navigation-clean-search"><div class="container-fluid"><div class="col-2"><img class="logo" src="Capture.png" width="80%"></div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navcol-1"><form class="d-flex me-auto navbar-form" target="_self"><div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"></label></div></form><ul class="navbar-nav"><li class="nav-item"><a class="nav-link d-flex justify-content-end" href="/index.html">Home</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end" href="/catalog.html">Shop</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end" href="/testimonial.html">Testimonial</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end" href="/cart.html">Cart</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end" href="/login.html">Login</a></li></ul></div></div></nav><div class="container"><!-- Start: Floating Button --><a href="#" class="float">
 <i class="fa fa-phone my-float"></i>
 </a>
-</div>
-        <div class="container bg-light border rounded-0 border-light con">
-            <div class="block-heading">
-                <h2 class="text-start text-dark d">Log In</h2>
-            </div>
-            <form class="border-dark">
-                <div class="mb-3"><label class="form-label regis" for="email">Email</label><input class="form-control item" type="email" id="email"></div>
-                <div class="mb-3"><label class="form-label regis" for="password">Password</label><input class="form-control item" type="password" id="password"></div>
-                <div class="mb-3">
-                    <div class="form-check item"><input class="form-check-input" type="checkbox" id="checkbox"><label class="form-check-label login" for="checkbox">Remember me</label></div>
-                </div>
-                <div class="loginbtn1 item"><button class="btn btn-primary regis" type="submit">Log In</button></div>
-                <div class="loginbtn item"><button class="btn btn-primary regis" type="submit">Register</button></div>
-            </form><a class="link-dark link" href="register.html">Register</a>
-        </div>
-    </header>
-    <footer class="footer-basic">
-        <div class="social-icons"><i class="fa fa-instagram"></i><a href="#"></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
-        <p class="copyright">BKLEEN © 2021</p>
-    </footer>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/vanilla-zoom.js"></script>
-</body>
-
-</html>
+<!-- End: Floating Button --></div><div class="container bg-light border rounded-0 border-light con"><div class="block-heading"><h2 class="text-start text-dark d">Log In</h2></div><form class="border-dark"><div class="mb-3"><label class="form-label regis" for="email">Email</label><input class="form-control item" type="email" id="email"></div><div class="mb-3"><label class="form-label regis" for="password">Password</label><input class="form-control item" type="password" id="password"></div><div class="mb-3"><div class="form-check item"><input class="form-check-input" type="checkbox" id="checkbox"><label class="form-check-label login" for="checkbox">Remember me</label></div></div><div class="loginbtn1 item"><button class="btn btn-primary regis" type="submit">Log In</button></div><div class="loginbtn item"><button class="btn btn-primary regis" type="submit">Register</button></div></form><a class="link-dark link" href="register.html">Register</a></div></header><!-- End: Header Blue --><!-- Start: Footer Basic --><footer class="footer-basic"><!-- Start: Social Icons --><div class="social-icons"><i class="fa fa-instagram"></i><a href="#"></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"></a><a href="#"><i class="icon ion-social-youtube"></i></a></div><!-- End: Social Icons --><!-- Start: Copyright --><p class="copyright">BKLEEN © 2021</p><!-- End: Copyright --></footer><!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script><script src="/assets/js/script.min.js?h=74bfed4bb61d799170de7da4c1ad5495"></script></body></html>
