--- a/payment.html
+++ b/payment.html
@@ -1,103 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
-    <link rel="stylesheet" href="assets/css/Floating-Button.css">
-    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-    <link rel="stylesheet" href="assets/css/Header-Blue.css">
-    <link rel="stylesheet" href="assets/css/Map-Clean.css">
-    <link rel="stylesheet" href="assets/css/Social-Icons.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-
-<body>
-    <header class="header-blue">
-        <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
-            <div class="container-fluid">
-                <div class="col-2"><img class="logo" src="assets/img/Capture.png" width="80%"></div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <form class="d-flex me-auto navbar-form" target="_self">
-                        <div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"></label></div>
-                    </form>
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="catalog.html">Shop</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="testimonial.html">Testimonial</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="cart.html">Cart</a></li>
-                        <li class="nav-item"><a class="nav-link d-flex justify-content-end" href="login.html">Login</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="container"><a href="#" class="float">
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Untitled</title><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;display=swap"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"><link rel="stylesheet" href="/assets/css/styles.min.css?h=4851444a1375b3ac20739422ad845bd8"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css"></head><body><!-- Start: Header Blue --><header class="header-blue"><nav class="navbar navbar-dark navbar-expand-md navigation-clean-search"><div class="container-fluid"><div class="col-2"><img class="logo" src="Capture.png" width="80%"></div><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navcol-1"><form class="d-flex me-auto navbar-form" target="_self"><div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"></label></div></form><ul class="navbar-nav"><li class="nav-item"><a class="nav-link d-flex justify-content-end" href="/index.html">Home</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end" href="/catalog.html">Shop</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end" href="/testimonial.html">Testimonial</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end" href="/cart.html">Cart</a></li><li class="nav-item"><a class="nav-link d-flex justify-content-end" href="/login.html">Login</a></li></ul></div></div></nav><div class="container"><!-- Start: Floating Button --><a href="#" class="float">
 <i class="fa fa-phone my-float"></i>
 </a>
-</div>
-        <div class="container bg-light border rounded-0 border-dark con">
-            <div class="block-heading">
-                <h2 class="text-start text-info">Payment</h2>
-            </div>
-            <form class="border rounded-0 border-dark check">
-                <div class="products">
-                    <h3 class="text-center title">Checkout</h3>
-                    <div class="row">
-                        <div class="col-xl-12 item">
-                            <div class="item"><span class="price2">Rp. 1.980.000</span>
-                                <p class="item-name">Product 1</p>
-                            </div>
-                        </div>
-                        <div class="col-xl-12 item">
-                            <div class="item"><span class="price2"><br>Rp. 1.980.000<br><br></span>
-                                <p class="item-name">Product 2</p>
-                            </div>
-                        </div>
-                        <div class="col item">
-                            <div class="item"><span class="price2"><br>Rp. 1.980.000<br><br></span>
-                                <p class="item-name">Total</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-details">
-                    <h3 class="text-start title">Credit Card Details</h3>
-                    <div class="row">
-                        <div class="col-sm-7">
-                            <div class="mb-3"><label class="form-label text-start d-flex justify-content-start text-start" for="card_holder">Card Holder</label><input class="form-control" type="text" id="card_holder" placeholder="Card Holder" name="card_holder"></div>
-                        </div>
-                        <div class="col-sm-5">
-                            <div class="mb-3"><label class="form-label d-flex justify-content-start">Expiration date</label>
-                                <div class="input-group expiration-date"><input class="form-control" type="text" placeholder="MM" name="expiration_month"><input class="form-control" type="text" placeholder="YY" name="expiration_year"></div>
-                            </div>
-                        </div>
-                        <div class="col-sm-8">
-                            <div class="mb-3"><label class="form-label d-flex justify-content-start" for="card_number">Card Number</label><input class="form-control" type="text" id="card_number" placeholder="Card Number" name="card_number"></div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="mb-3"><label class="form-label d-flex justify-content-start" for="cvc">CVC</label><input class="form-control" type="text" id="cvc" placeholder="CVC" name="cvc"></div>
-                        </div>
-                        <div class="col-sm-12">
-                            <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Proceed</button></div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </header>
-    <footer class="footer-basic">
-        <div class="social-icons"><i class="fa fa-instagram"></i><a href="#"></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
-        <p class="copyright">BKLEEN © 2021</p>
-    </footer>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/vanilla-zoom.js"></script>
-</body>
-
-</html>
+<!-- End: Floating Button --></div><div class="container bg-light border rounded-0 border-dark con"><div class="block-heading"><h2 class="text-start text-info">Payment</h2></div><form class="border rounded-0 border-dark check"><div class="products"><h3 class="text-center title">Checkout</h3><div class="row"><div class="col-xl-12 item"><div class="item"><span class="price2">Rp. 1.980.000</span><p class="item-name">Product 1</p></div></div><div class="col-xl-12 item"><div class="item"><span class="price2"><br>Rp. 1.980.000<br><br></span><p class="item-name">Product 2</p></div></div><div class="col item"><div class="item"><span class="price2"><br>Rp. 1.980.000<br><br></span><p class="item-name">Total</p></div></div></div></div><div class="card-details"><h3 class="text-start title">Credit Card Details</h3><div class="row"><div class="col-sm-7"><div class="mb-3"><label class="form-label text-start d-flex justify-content-start text-start" for="card_holder">Card Holder</label><input class="form-control" type="text" id="card_holder" placeholder="Card Holder" name="card_holder"></div></div><div class="col-sm-5"><div class="mb-3"><label class="form-label d-flex justify-content-start">Expiration date</label><div class="input-group expiration-date"><input class="form-control" type="text" placeholder="MM" name="expiration_month"><input class="form-control" type="text" placeholder="YY" name="expiration_year"></div></div></div><div class="col-sm-8"><div class="mb-3"><label class="form-label d-flex justify-content-start" for="card_number">Card Number</label><input class="form-control" type="text" id="card_number" placeholder="Card Number" name="card_number"></div></div><div class="col-sm-4"><div class="mb-3"><label class="form-label d-flex justify-content-start" for="cvc">CVC</label><input class="form-control" type="text" id="cvc" placeholder="CVC" name="cvc"></div></div><div class="col-sm-12"><div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Proceed</button></div></div></div></div></form></div></header><!-- End: Header Blue --><!-- Start: Footer Basic --><footer class="footer-basic"><!-- Start: Social Icons --><div class="social-icons"><i class="fa fa-instagram"></i><a href="#"></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"></a><a href="#"><i class="icon ion-social-youtube"></i></a></div><!-- End: Social Icons --><!-- Start: Copyright --><p class="copyright">BKLEEN © 2021</p><!-- End: Copyright --></footer><!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script><script src="/assets/js/script.min.js?h=74bfed4bb61d799170de7da4c1ad5495"></script></body></html>
